--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-Package.swift
+*Package.swift
 
 ## Any binary framework
 *.framework
